--- a/TheFirstAppself/app/src/main/res/layout/activity_home_screen.xml
+++ b/TheFirstAppself/app/src/main/res/layout/activity_home_screen.xml
@@ -8,8 +8,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvIsi"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_width="429dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/blue_line" />
@@ -41,7 +42,10 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="24dp"
         android:hint="Search"
+        android:inputType="text"
         app:layout_constraintStart_toEndOf="@+id/img_search"
         app:layout_constraintTop_toTopOf="@+id/register" />
 
