--- a/AppChooser/app/src/main/res/layout/activity_main.xml
+++ b/AppChooser/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,23 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="App is Locked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_send_email"
+        android:id="@+id/btn_reauthenticate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Send Email"
-        android:onClick="sendEmail"
+        android:text="Reauthenticate"
+        android:onClick="reauthenticate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
