--- a/FinalProject/app/src/main/res/layout/activity_mock_up_nama.xml
+++ b/FinalProject/app/src/main/res/layout/activity_mock_up_nama.xml
@@ -36,6 +36,7 @@
         android:layout_marginTop="8dp"
         android:background="@android:color/holo_orange_light"
         android:text="Tampilkan"
+        android:onClick="TampilNama"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_nama" />
 
@@ -87,5 +88,18 @@
         app:layout_constraintStart_toEndOf="@+id/menu_kalkulator"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
         app:layout_constraintVertical_bias="0.483" />
+
+    <TextView
+        android:id="@+id/txt_hasil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="Hasil"
+        android:textSize="35sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_nama" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
